--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
 
             <section id="rules">
                 <h2>Rules</h2>
-                <p>We only have four rules here in the guild:</p>
                 <ol>
-                    <li>NAAT raid has a damage cap of 5M per day. This will significantly slow down the pace of the raid and allow everyone to get damage on the board.</li>
-                    <li>HRancor raid has a 24 hour zero damage limit. That means NO DAMAGE within the first 24 hours after the raid starts.
+                    <li>NAAT raid has a 24-hour damage cap of 1.5M. After the first 24 hours, the damage cap is 5M. The goal is to slow down the NAAT so that everyone can participate</li>
+                    <li>HRancor raid has a 24 hour zero damage limit. That means <strong>NO DAMAGE</strong> within the first 24 hours after the raid starts.
                         We can easily finish this raid within an hour or two and since we have guild members all around the world, this gives
                         everyone a chance to get on the board. Even if the raid finishes before you are able to get a hit, you'll still get rewards.
                         It's a win-win. After 24 hours, we ask that you limit the damage to around 1M. First failure to follow this rule will result in a warning.
@@ -59,6 +58,7 @@
                         player notifies an officer in advance that they will be inactive and will be coming back (e.g. vacation, planned 
                         hospitalization, etc.). If someone is unexpectedly inactive for more than 21 days and comes back, they can contact us
                         in Discord and we will do what we can to get them back into the Guild.</li>
+					<li>Anyone not following any of the rules can be kicked from the guild with or without a warning, at the officer's discretion.</li>
                 </ol>
 
                 <h3>Troubles Doing Zero Damage?</h3>
