Minor text changes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<li>Anyone not following any of the rules can be kicked from the guild with or without a warning, at the officer's discretion.</li>
                 </ol>
 
-                <h3>Troubles Doing Zero Damage?</h3>
+                <h3>How can you do zero damage?</h3>
                 <p>
                     Send in <strong>one</strong> of your weakest characters who does NOT counterattack. You will receive a warning message for sending
                     one toon. You can safely ignore it and try again.
@@ -76,7 +76,7 @@
                     <a href="mailto:guildofbeers@gmail.com?subject=Discord%20Invite">guildofbeers@gmail.com</a> with the subject, "Discord Invite".
                     Please be sure to incude your player's name and ally code.</p>
 
-                <p>Troubles finding your ally code?</p>
+                <h3>Troubles finding your ally code?</h3>
                 <ul>
                     <li>Launch Star Wars: Galaxy of Heroes</li>
                     <li>Tap on your name on the home screen</li>
