Update and organize rules

--- a/index.html
+++ b/index.html
@@ -45,23 +45,56 @@
             <p class="lead">Welcome to the Guild of Beers! Please read the following carefully.</p>
 
             <section id="rules">
-                <h2>Rules</h2>
+                <h2>Guild Makeup</h2>
+                <p>
+                    We have guild members from all around the world. It is a challenge to ensure that everyone
+                    can participate in the Raids and earn the great rewards. To be fair to everyone, we enforce
+                    the following rules.
+                </p>
+
+                <h3>Raid Rules</h3>
+                <p><strong>Note:</strong> These rules change periodically as the guild gets stronger and we adjust.</p>
                 <ol>
-                    <li>NAAT raid has a 24-hour damage cap of 1.5M. After the first 24 hours, the damage cap is 5M. The goal is to slow down the NAAT so that everyone can participate</li>
-                    <li>HRancor raid has a 24 hour zero damage limit. That means <strong>NO DAMAGE</strong> within the first 24 hours after the raid starts.
-                        We can easily finish this raid within an hour or two and since we have guild members all around the world, this gives
-                        everyone a chance to get on the board. Even if the raid finishes before you are able to get a hit, you'll still get rewards.
-                        It's a win-win. After 24 hours, we ask that you limit the damage to around 1M. First failure to follow this rule will result in a warning.
-                        A second offense will result in getting the boot!</li>
-                    <li>Have fun and talk with your guildies! Sit back, drink a beer, and enjoy the game.</li>
-                    <li>If a player has no game activity for more than 21 days, they will be removed in order to make room for an active player unless the
-                        player notifies an officer in advance that they will be inactive and will be coming back (e.g. vacation, planned 
-                        hospitalization, etc.). If someone is unexpectedly inactive for more than 21 days and comes back, they can contact us
-                        in Discord and we will do what we can to get them back into the Guild.</li>
-					<li>Anyone not following any of the rules can be kicked from the guild with or without a warning, at the officer's discretion.</li>
+                    <li>Normal AAT (NAAT)
+                        <ul>
+                            <li>During the first 24 hours after the raid starts, members are limited to doing no more
+                                than 1.5 million damage points.</li>
+                            <li>After the first 24 hours, the damage cap is raised to 5 million damage points.</li>
+                        </ul>
+                    </li>
+                    <li>Heroic Pit (Rancor)
+                        <ul>
+                            <li>During the first 24 hours after the raid starts, members should enter the raid but do
+                                <strong>NO DAMAGE</strong>. (<a href="#no-damage">How to do no damage</a>)</li>
+                            <li>After the first 24 hours, members are limited to 1 million damage points.</li>
+                            <li>As a matter of courtesy to allow everyone a chance to earn a 7-star Raid Han Solo,
+                                the guild members that have him already do minimal or no damage for the entire raid.</li>
+                        </ul>
+                    </li>
                 </ol>
 
-                <h3>How can you do zero damage?</h3>
+                <h3>Guild Rules</h3>
+                <ol>
+                    <li>First and foremost, have fun! Chat with your guildies! Sit back, drink a beer, and enjoy the game!</li>
+                    <li>Join our Discord server. Communications during the Territory Wars and Territory Battles is much
+                        easier there than using the in-game chat. (<a href="#communication">How to join</a>)</li>
+                    <li>We are a laid back guild, but we all want to make progress toward the greater rewards. We are active
+                        in the Territory Battles and Territory Wars. Because success in these requires active guild participation,
+                        we have an activity requirement.
+                        <ul>
+                            <li>If a player has no game activity for more than 21 days, they will be removed in order to make room
+                                for an active player.</li>
+                            <li>However, we will suspend the automatic removal if a guild member notifies an officer on Discord in
+                                advance that they will be inactive and will be coming back (e.g. vacation, planned hospitalization, etc.).</li>
+                            <li>If someone is unexpectedly inactive for more than 21 days and comes back, they can <a href="#contact">contact an officer</a> in Discord.
+                                We will do what we can to get them back into the Guild. (See below about Discord usage.)</li>
+                        </ul>
+                    <li>Sadly, some members have decided that these rules do not apply to them. The officers do not enjoy doing it, but they
+                        will enforce them. Anyone not following any of the rules can be kicked from the guild, with or without a warning,
+                        at the officer's discretion, depending on the severity and frequency of the infraction(s).
+                </ol>
+
+                <h3 id="no-damage">How can you do zero damage?</h3>
                 <p>
                     Send in <strong>one</strong> of your weakest characters who does NOT counterattack. You will receive a warning message for sending
                     one toon. You can safely ignore it and try again.
@@ -102,14 +135,23 @@
             </section>
 
             <section id="contact">
-                <h2>Contact</h2>
-                <p>Please contact Fuwic for anything that needs changed on this site or if you'd like to contribute. For general questions, feel free
-                to ask any one of our guild members!</p>
+                <h2>Guild Officers</h2>
+
+                <p>The guild officers are:</p>
+                <ul>
+                    <li> Raffish (Leader)</li>
+                    <li> Redshirt</li>
+                    <li>ScruplousWayz</li>
+                    <li> LittleBitDrunk</li>
+                    <li> Svar</li>
+                </ul>
+
+                <p>You can also contact us on Discord using the `@officers` tag.</p>
             </section>
 
         </div>
 
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
 
