Fix Scrups's name

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <ul>
                     <li> Raffish (Leader)</li>
                     <li> Redshirt</li>
-                    <li>ScruplousWayz</li>
+                    <li> ScrupulousWayz</li>
                     <li> LittleBitDrunk</li>
                     <li> Svar</li>
                 </ul>
