Add how to limit damage on NAAT

--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
                     <li>Normal AAT (NAAT)
                         <ul>
                             <li>During the first 24 hours after the raid starts, members are limited to doing no more
-                                than 1.5 million damage points.</li>
-                            <li>After the first 24 hours, the damage cap is raised to 5 million damage points.</li>
+                                than 1.5 million damage points. (<a href="#naat-limit">How to limit to 1.5M</a>)</li>
+                            <li>After the first 24 hours, the damage cap is raised to a combined total of 5 million
+                                damage points. No one should exceed 5 million points for the entire NAAT raid.</li>
                         </ul>
                     </li>
                     <li>Heroic Pit (Rancor)
@@ -93,6 +94,22 @@
                         will enforce them. Anyone not following any of the rules can be kicked from the guild, with or without a warning,
                         at the officer's discretion, depending on the severity and frequency of the infraction(s).
                 </ol>
+
+                <h3 id="naat-limit">How to Limit Damage to 1.5M on the NAAT</h3>
+
+                <p>
+                    Because the game does not show you how much damage you've done, you need to closely watch the health percentage
+                    when you start the round and monitor it while attacking. You should start to Escape your characters, or use only
+                    basic (low damage) when you start getting close to the percentage decrease in health that approximates 1.5M damage points.
+                </p>
+
+                <p>Each phase of the NAAT has different damage points. According to one source, they are currently:</p>
+                <ul>
+                    <li>P1: 15,600,000 (1.5M = 9.61%)</li>
+                    <li>P2: 22,700,000 (1.5M = 6.60%)</li>
+                    <li>P3: 12,250,000 (1.5M = 12.24%)</li>
+                    <li>P4: 13,550,000 (1.5M = 11.07%)</li>
+                </ul>
 
                 <h3 id="no-damage">How can you do zero damage?</h3>
                 <p>
