--- a/index.html
+++ b/index.html
@@ -31,15 +31,19 @@
             }
 
             section { padding: 1rem 0; }
-
-
-
         </style>
 	</head>
 
 	<body>
 
         <div class="container">
+			<div id="google_translate_element"></div><script type="text/javascript">
+			function googleTranslateElementInit() {
+			  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE, autoDisplay: false}, 'google_translate_element');
+			}
+			</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+        
+        
             <h1>Guild of Beers</h1>
 
             <p class="lead">Welcome to the Guild of Beers! Please read the following carefully.</p>
