--- a/raid.html
+++ b/raid.html
@@ -165,7 +165,7 @@
 
                 $('form').on('submit', function(e) {
                     e.preventDefault();
-                    var url = 'https://guild-of-beers.github.oi/raid.html?start='
+                    var url = 'https://guild-of-beers.github.io/raid.html?start='
                         + moment( $('.timestamp').val() ).utc().format()
                         + '&type='
                         + $('[name=type]:checked').val();
