Remove NAAT rules and add HAAT and Sith

--- a/index.html
+++ b/index.html
@@ -59,12 +59,11 @@
                 <h3>Raid Rules</h3>
                 <p><strong>Note:</strong> These rules change periodically as the guild gets stronger and we adjust.</p>
                 <ol>
-                    <li>Normal AAT (NAAT)
+                    <li>HAAT &amp; Sith
                         <ul>
-                            <li>During the first 24 hours after the raid starts, members are limited to doing no more
-                                than 1.5 million damage points. (<a href="#naat-limit">How to limit to 1.5M</a>)</li>
-                            <li>After the first 24 hours, the damage cap is raised to a combined total of 5 million
-                                damage points. No one should exceed 5 million points for the entire NAAT raid.</li>
+                            <li>There are no time limits or damage caps on the HAAT &amp; Sith raids.  You're welcome to use your powerhouse teams,
+								however, we ask that everyone keep in mind that we want everyone to treat the other guildies fairly and not always
+								be at the top of the rankings.  We all contribute raid tickets, and we all should reap the rewards.</li>
                         </ul>
                     </li>
                     <li>Heroic Pit (Rancor)
