Update Rancor rules

--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
                     </li>
                     <li>Heroic Pit (Rancor)
                         <ul>
-                            <li>During the first 24 hours after the raid starts, members should enter the raid but do
-                                <strong>NO DAMAGE</strong>. (<a href="#no-damage">How to do no damage</a>)</li>
-                            <li>After the first 24 hours, members are limited to 1 million damage points.</li>
+                            <li>There is no longer a zero-damage period. Rather, we replaced it with the “join” feature for the raid.
+                                Thus, once the game allows damage, anyone can do up to 1M.  No damage is allowed during the join period.</li>
                             <li>As a matter of courtesy to allow everyone a chance to earn a 7-star Raid Han Solo,
                                 the guild members that have him already do minimal or no damage for the entire raid.</li>
                         </ul>
@@ -98,11 +97,13 @@
                         at the officer's discretion, depending on the severity and frequency of the infraction(s).
                 </ol>
 
+                <!--
                 <h3 id="no-damage">How can you do zero damage?</h3>
                 <p>
                     Send in <strong>one</strong> of your weakest characters who does NOT counterattack. You will receive a warning message for sending
                     one toon. You can safely ignore it and try again.
                 </p>
+                -->
             </section>
 
             <section id="communication">
